# homebrew-os

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  Makefile.sub  README.md  build.sh
cmake/: arm-toolchain.cmake
include/bcm2836/: address.h  arm_timer.h  delay.h  gpio.h  interrupt.h  mbox.h  uart.h
include/rpi/: address.h  arm_timer.h  delay.h  gpio.h  interrupt.h  mailbox.h  uart.h
ldscripts/: link.ld
script/: extract_binary.sh
src/: cstartup.c  main.c  start.s
src/app/: main.c
src/bcm2836/: arm_timer.c  cache-v7.s  delay.s  gpio.c  interrupt.c  interrupt.s  mbox.c  uart.c
src/boot/: cstartup.c  interrupt_handler.c  start.s
src/rpi/: arm_timer.c  enable_interrupts.s  gpio.c  interrupt.c  interrupt.s  mailbox.c  system_timer.s  uart.c
